# mac-app-pid

./: README.md  package.json  setup.cfg  setup.py
scripts/: app-pid
tests/mac-app-pid/examples/: iTunes.sh
